@@ -37,6 +37,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8152. Refactoring of lazy persist storage cases. (Arpit Agarwal)
 
+    HDFS-8276. LazyPersistFileScrubber should be disabled if scrubber interval
+    configured zero. (Surendra Singh Lilhore via Arpit Agarwal)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
